--- a/index.html
+++ b/index.html
@@ -26,27 +26,34 @@
       <p>Web Developer</p>
       <div class="links">
         <a href="https://www.linkedin.com/in/dev-rizwana" target="_blank"
-        ><i class="fa-brands fa-linkedin"></i
-      ></a>
-      <a href="https://github.com/DeveloperRizwana" target="_blank"
-        ><i class="fa-brands fa-github"></i
-      ></a>
-      <a href="https://x.com/DPerween39952" target="_blank">
-        <i class="fa-brands fa-twitter"></i>
-      </a>
-      <a href="mailto:dev.rizwana.perween01@gmail.com">
-        <i class="fa-solid fa-envelope"></i>
-      </a>
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/DeveloperRizwana" target="_blank"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <a href="https://x.com/DPerween39952" target="_blank">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="mailto:dev.rizwana.perween01@gmail.com">
+          <i class="fa-solid fa-envelope"></i>
+        </a>
       </div>
     </div>
 
     <div class="about">
       <h2>About Me</h2>
-      <p>Gold Medalist in B.A.(Hons.) with hands on experience in web development (HTML, CSS, JavaScript, Tailwind CSS) and Java programming. Skilled in building interactive games and responsive websites, applying modern UI/UX principles. Proficient in Git, GitHub, VS Code, and Linux, with strong problem-solving, teamwork, and adaptability. Passionate about technology, creativity, and continuous learning.</p>
+      <p>
+        Gold Medalist in B.A.(Hons.) with hands on experience in web development
+        (HTML, CSS, JavaScript, Tailwind CSS) and Java programming. Skilled in
+        building interactive games and responsive websites, applying modern
+        UI/UX principles. Proficient in Git, GitHub, VS Code, and Linux, with
+        strong problem-solving, teamwork, and adaptability. Passionate about
+        technology, creativity, and continuous learning.
+      </p>
     </div>
 
     <div class="skills">
-        <h2>My Skills</h2>
+      <h2>My Skills</h2>
       <div class="skill-box-container">
         <div class="skill-box">
           <i class="fa-brands fa-html5"></i>
@@ -64,29 +71,88 @@
           <i class="fa-brands fa-java"></i>
           <h3>JAVA</h3>
         </div>
-      </div>  
+      </div>
     </div>
 
     <div class="Projects">
       <h2>My Projects</h2>
-    <div class="Projects-box-container">
-      <div class="Projects-box">
-        <!-- <i class="fa-brands fa-html5"></i> -->
-        <h3>Project 1</h3>
+      <div class="Projects-box-container">
+        <div class="Projects-box">
+          <!-- <i class="fa-brands fa-html5"></i> -->
+          <h3>Dice War</h3>
+          <p>
+            A fun and interactive game where players roll dice and battle for
+            the highest score! Dice War is a simple yet exciting game that tests
+            luck and strategy. Players roll virtual dice, and the one with the
+            highest number wins the round.
+          </p>
+          <button>HTMl</button>
+          <button>CSS</button>
+          <button>JS</button>
+          <a href="https://github.com/DeveloperRizwana/dice-war" target="_blank"
+            ><p>GitHub</p>
+            <i class="fa-solid fa-link"></i
+          ></a>
+        </div>
+        <div class="Projects-box">
+          <h3>Guess-O-Mania</h3>
+          <p>"Guess O Mania" is an exciting number-guessing game that challenges players to predict the correct number within a given range. With each guess, players receive hints to guide them closer to the right answer. The game tests logic, intuition, and quick decision-making, making it both fun and engaging</p>
+          <button>HTMl</button>
+          <button>CSS</button>
+          <button>JS</button>
+          <a
+            href="https://github.com/DeveloperRizwana/Guess-O-Mania"
+            target="_blank"
+            ><p>GitHub</p>
+            <i class="fa-solid fa-link"></i
+          </a>
+        </div>
+        <div class="Projects-box">
+          <h3>Barbie-Themed Interactive Website</h3>
+          <p>This project brings Barbie’s world to life with engaging sections:
+            <p>✨ Story Section – Click on a story card to reveal an exciting Barbie story.
+            <p>👗 Fashion Section – Explore Barbie’s fashion by clicking on fashion cards like clothes to see</p></p>
+          </p>
+          <button>HTMl</button>
+          <button>CSS</button>
+          <button>JS</button>
+          <a
+            href="https://github.com/DeveloperRizwana/Barbie"
+            target="_blank"
+            ><p>GitHub</p>
+            <i class="fa-solid fa-link"></i
+          </a>
+        </div>
+        <div class="Projects-box">
+          <h3>Food-Delivery-Website  </h3>
+          This is a responsive and user-friendly food delivery website designed using HTML and CSS. The website features a clean and modern layout, showcasing various food items, restaurants, and menu categories. Users can easily browse through the available food options and see detailed information about each item. The design is optimized for both desktop and mobile views, ensuring a smooth experience across devices. The website also includes interactive elements like hover effects and smooth transitions to enhance the overall user experience.
+          <button>HTMl</button>
+          <button>CSS</button>
+          <button>JS</button>
+          <a
+            href="https://github.com/DeveloperRizwana/Food-Delivery-Website"
+            target="_blank"
+            ><p>GitHub</p>
+            <i class="fa-solid fa-link"></i
+          </a>
+        </div>
+
+        <div class="Projects-box">
+          <h3>Amazon Clone– A Responsive E-Commerce UI </h3>
+          <p>This project is a front-end replica of Amazon's homepage, focusing on layout, responsiveness, and user-friendly design. The goal was to recreate the visual experience of Amazon, applying modern web development techniques</p>
+          <button>HTMl</button>
+          <button>CSS</button>
+          <button>JS</button>
+          <a
+            href="https://github.com/DeveloperRizwana/Amazon-Clone"
+            target="_blank"
+            ><p>GitHub</p>
+            <i class="fa-solid fa-link"></i
+          </a>
+        </div>
       </div>
-      <div class="Projects-box">
-        <!-- <i class="fa-brands fa-css3-alt"></i> -->
-        <h3>Project 2</h3>
-      </div>
-      <div class="Projects-box">
-        <!-- <i class="fa-brands fa-js"></i> -->
-        <h3>Project 3</h3>
-      </div>
-      <div class="Projects-box">
-        <!-- <i class="fa-brands fa-java"></i> -->
-        <h3>Project 4</h3>
-      </div>
-    </div>  
-  </div>
+    </div>
   </body>
 </html>
+
+
