--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
       <h2>My Projects</h2>
       <div class="Projects-box-container">
         <div class="Projects-box">
-          <!-- <i class="fa-brands fa-html5"></i> -->
           <h3>Dice War</h3>
           <p>
             A fun and interactive game where players roll dice and battle for
@@ -86,63 +85,68 @@
             luck and strategy. Players roll virtual dice, and the one with the
             highest number wins the round.
           </p>
-          <button>HTMl</button>
-          <button>CSS</button>
-          <button>JS</button>
-          <a href="https://github.com/DeveloperRizwana/dice-war" target="_blank"
-            ><p>GitHub</p>
-            <i class="fa-solid fa-link"></i
-          ></a>
+          <div> <button>HTML</button>
+            <button>CSS</button>
+            <button>JS</button></div>
+
+         <div> <a href="https://github.com/DeveloperRizwana/dice-war" target="_blank"
+          ><p>GitHub</p>
+          <i class="fa-solid fa-link"></i
+        ></a></div>
         </div>
+
         <div class="Projects-box">
           <h3>Guess-O-Mania</h3>
           <p>"Guess O Mania" is an exciting number-guessing game that challenges players to predict the correct number within a given range. With each guess, players receive hints to guide them closer to the right answer. The game tests logic, intuition, and quick decision-making, making it both fun and engaging</p>
-          <button>HTMl</button>
+         <div> <button>HTML</button>
           <button>CSS</button>
-          <button>JS</button>
-          <a
-            href="https://github.com/DeveloperRizwana/Guess-O-Mania"
-            target="_blank"
-            ><p>GitHub</p>
-            <i class="fa-solid fa-link"></i
-          </a>
+          <button>JS</button></div>
+         <div> <a
+          href="https://github.com/DeveloperRizwana/Guess-O-Mania"
+          target="_blank"
+          ><p>GitHub</p>
+          <i class="fa-solid fa-link"></i
+        </a></div>
         </div>
+
         <div class="Projects-box">
-          <h3>Barbie-Themed Interactive Website</h3>
+          <h3>Barbie</h3>
           <p>This project brings Barbie’s world to life with engaging sections:
-            <p>✨ Story Section – Click on a story card to reveal an exciting Barbie story.
-            <p>👗 Fashion Section – Explore Barbie’s fashion by clicking on fashion cards like clothes to see</p></p>
+            ✨ Story Section – Click on a story card to reveal an exciting Barbie story.
+              👗 Fashion Section – Explore Barbie’s fashion by clicking on fashion cards like clothes to see
           </p>
-          <button>HTMl</button>
-          <button>CSS</button>
-          <button>JS</button>
-          <a
-            href="https://github.com/DeveloperRizwana/Barbie"
-            target="_blank"
-            ><p>GitHub</p>
-            <i class="fa-solid fa-link"></i
-          </a>
+          <div> <button>HTML</button>
+            <button>CSS</button>
+            <button>JS</button></div>
+         <div> <a
+          href="https://github.com/DeveloperRizwana/Barbie"
+          target="_blank"
+          ><p>GitHub</p>
+          <i class="fa-solid fa-link"></i
+        </a></div>
         </div>
+        
         <div class="Projects-box">
           <h3>Food-Delivery-Website  </h3>
-          This is a responsive and user-friendly food delivery website designed using HTML and CSS. The website features a clean and modern layout, showcasing various food items, restaurants, and menu categories. Users can easily browse through the available food options and see detailed information about each item. The design is optimized for both desktop and mobile views, ensuring a smooth experience across devices. The website also includes interactive elements like hover effects and smooth transitions to enhance the overall user experience.
-          <button>HTMl</button>
-          <button>CSS</button>
-          <button>JS</button>
-          <a
+          <p>This is a responsive and user-friendly food delivery website designed using HTML and CSS. The website features a clean and modern layout, showcasing various food items, restaurants, and menu categories. Users can easily browse through the available food options and see detailed information about each item. </p>
+          <div> <button>HTML</button>
+            <button>CSS</button>
+            <button>JS</button></div>
+          <div><a
             href="https://github.com/DeveloperRizwana/Food-Delivery-Website"
             target="_blank"
             ><p>GitHub</p>
             <i class="fa-solid fa-link"></i
-          </a>
+          </a></div>
         </div>
 
         <div class="Projects-box">
-          <h3>Amazon Clone– A Responsive E-Commerce UI </h3>
+          <h3>Amazon Clone </h3>
           <p>This project is a front-end replica of Amazon's homepage, focusing on layout, responsiveness, and user-friendly design. The goal was to recreate the visual experience of Amazon, applying modern web development techniques</p>
-          <button>HTMl</button>
-          <button>CSS</button>
-          <button>JS</button>
+
+          <div> <button>HTML</button>
+            <button>CSS</button>
+            <button>JS</button></div>
           <a
             href="https://github.com/DeveloperRizwana/Amazon-Clone"
             target="_blank"
