--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </ul>
     </div>
 
-    <div class="hero-section">
+    <div class="hero-section" id="Home">
       <h1>Rizwana Perween</h1>
-      <p>Web Developer</p>
+      <p class="tagline">Web Developer</p>
       <div class="links">
         <a href="https://www.linkedin.com/in/dev-rizwana" target="_blank"
           ><i class="fa-brands fa-linkedin"></i
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <div class="about">
+    <div class="about" id="About">
       <h2>About Me</h2>
       <p>
         Gold Medalist in B.A.(Hons.) with hands on experience in web development
@@ -52,7 +52,7 @@
       </p>
     </div>
 
-    <div class="skills">
+    <div class="skills" id="skills">
       <h2>My Skills</h2>
       <div class="skill-box-container">
         <div class="skill-box">
@@ -74,7 +74,7 @@
       </div>
     </div>
 
-    <div class="Projects">
+    <div class="Projects" id="Projects">
       <h2>My Projects</h2>
       <div class="Projects-box-container">
         <div class="Projects-box">
@@ -85,77 +85,107 @@
             luck and strategy. Players roll virtual dice, and the one with the
             highest number wins the round.
           </p>
-          <div> <button>HTML</button>
+          <div> 
+            <button>HTML</button>
             <button>CSS</button>
-            <button>JS</button></div>
-
-         <div> <a href="https://github.com/DeveloperRizwana/dice-war" target="_blank"
-          ><p>GitHub</p>
-          <i class="fa-solid fa-link"></i
-        ></a></div>
+            <button>JS</button>
+          </div>
+             <div> 
+             <a href="https://github.com/DeveloperRizwana/dice-war" target="_blank"
+             ><p>GitHub <i class="fa-solid fa-link"></i></p>
+             </a>
+             </div>
         </div>
 
         <div class="Projects-box">
           <h3>Guess-O-Mania</h3>
           <p>"Guess O Mania" is an exciting number-guessing game that challenges players to predict the correct number within a given range. With each guess, players receive hints to guide them closer to the right answer. The game tests logic, intuition, and quick decision-making, making it both fun and engaging</p>
-         <div> <button>HTML</button>
+         <div> 
+          <button>HTML</button>
           <button>CSS</button>
-          <button>JS</button></div>
+          <button>JS</button>
+        </div>
          <div> <a
-          href="https://github.com/DeveloperRizwana/Guess-O-Mania"
-          target="_blank"
-          ><p>GitHub</p>
-          <i class="fa-solid fa-link"></i
-        </a></div>
+            href="https://github.com/DeveloperRizwana/Guess-O-Mania"
+            target="_blank"
+            ><p>GitHub <i class="fa-solid fa-link"></i
+            </p>
+            </a>
+           </div>
         </div>
 
         <div class="Projects-box">
           <h3>Barbie</h3>
           <p>This project brings Barbie’s world to life with engaging sections:
-            ✨ Story Section – Click on a story card to reveal an exciting Barbie story.
-              👗 Fashion Section – Explore Barbie’s fashion by clicking on fashion cards like clothes to see
+            Story Section – Click on a story card to reveal an exciting Barbie story.
+            Fashion Section – Explore Barbie’s fashion by clicking on fashion cards like clothes to see
           </p>
-          <div> <button>HTML</button>
+          <div> 
+            <button>HTML</button>
             <button>CSS</button>
-            <button>JS</button></div>
-         <div> <a
-          href="https://github.com/DeveloperRizwana/Barbie"
-          target="_blank"
-          ><p>GitHub</p>
-          <i class="fa-solid fa-link"></i
-        </a></div>
+            <button>JS</button>
+          </div>
+          <div> 
+            <a
+            href="https://github.com/DeveloperRizwana/Barbie"
+            target="_blank"
+            ><p>GitHub <i class="fa-solid fa-link"></i
+            </p>
+            </a>
+          </div>
         </div>
         
         <div class="Projects-box">
-          <h3>Food-Delivery-Website  </h3>
+          <h3>Food-Delivery-Website </h3>
           <p>This is a responsive and user-friendly food delivery website designed using HTML and CSS. The website features a clean and modern layout, showcasing various food items, restaurants, and menu categories. Users can easily browse through the available food options and see detailed information about each item. </p>
-          <div> <button>HTML</button>
+          <div> 
+            <button>HTML</button>
             <button>CSS</button>
-            <button>JS</button></div>
+            <button>JS</button>
+          </div>
           <div><a
             href="https://github.com/DeveloperRizwana/Food-Delivery-Website"
             target="_blank"
-            ><p>GitHub</p>
-            <i class="fa-solid fa-link"></i
-          </a></div>
+            ><p>GitHub <i class="fa-solid fa-link"></i
+            </p>
+             </a>
+           </div>
         </div>
 
         <div class="Projects-box">
           <h3>Amazon Clone </h3>
           <p>This project is a front-end replica of Amazon's homepage, focusing on layout, responsiveness, and user-friendly design. The goal was to recreate the visual experience of Amazon, applying modern web development techniques</p>
 
-          <div> <button>HTML</button>
+          <div> 
+            <button>HTML</button>
             <button>CSS</button>
-            <button>JS</button></div>
+            <button>JS</button>
+          </div>
+        <div>
           <a
-            href="https://github.com/DeveloperRizwana/Amazon-Clone"
-            target="_blank"
-            ><p>GitHub</p>
-            <i class="fa-solid fa-link"></i
-          </a>
+          href="https://github.com/DeveloperRizwana/Amazon-Clone"
+          target="_blank"
+          ><p>GitHub <i class="fa-solid fa-link"></i
+          </p>
+        </a>
+        </div>
         </div>
       </div>
     </div>
+
+    <div id="Contact">
+      <h2>Contact Me</h2>
+     <div class="contact-box">
+      <input type="text" name="name" id="name" placeholder="Your Name..."> 
+      <input type="email" name="name" id="email" placeholder="Your Email..."> 
+      <textarea name="message" id="message" placeholder="Your Message..."></textarea>
+      <button type="submit" class="btn">Send Message</button>
+     </div>
+    </div>
+
+    <footer>
+      <p>&copy; 2025 Rizwana Perween 💟.All rights reserved.</p>
+    </footer>
   </body>
 </html>
 
